flux/base/manifests/sabnzbd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sabnzbd
  labels:
    istio.io/dataplane-mode: ambient
