flux/base/manifests/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sabnzbd
  name: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:
      containers:
      - name: vpn-connect
        image: lscr.io/linuxserver/wireguard:latest
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          privileged: true
        volumeMounts:
        - name: wg-config
          mountPath: /config/wg_confs
      - image: lscr.io/linuxserver/sabnzbd:4.5.5
        name: sabnzbd
        resources:
          limits:
            memory: 8Gi
          requests:
            memory: 512Mi
            cpu: 250m
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /incomplete-downloads
          name: incomplete-downloads
        - mountPath: /downloads
          name: complete-downloads
      volumes:
      - name: config
        hostPath:
          path: /megamind/config/sabnzbd
      - name: incomplete-downloads
        hostPath:
          path: /bigdata/media/downloads/incomplete
      - name: complete-downloads
        hostPath:
          path: /bigdata/media/downloads/complete
      - name: wg-config
        secret:
          secretName: wg-config
