flux/base/manifests/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sabnzbd
  name: sabnzbd
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: sabnzbd
  type: ClusterIP
